--- a/ofidkid.html
+++ b/ofidkid.html
@@ -104,7 +104,7 @@
 			<ul class="links">
 				<li ><a href="index.html">Home</a></li>
 				<li><a href="explore.html">Services</a></li>
-				<li><a href="community.html">Community</a></li>
+				<li><a href="community.html">News & Blog</a></li>
 				<li><a href="pages/livestream.html">𝕏 Live Spaces</a></li>
 				<li class="active"><a href="ofidkid.html">OFiD Kid</a></li>
 				<li><a href="pages/about.html">About Us</a></li>
@@ -121,7 +121,7 @@
 					</a>
 				</li>
 				  <li><a href="https://x.com/OFiDCrypt" class="icon brands fa-x-twitter"><span class="label">X</span></a></li>
-				  <li><a href="https://www.tiktok.com/@OFiDTales" class="icon brands alt fa-tiktok"><span class="label">TikTok</span></a></li>
+				  <li><a href="https://www.tiktok.com/@Giddys_CA" class="icon brands alt fa-tiktok"><span class="label">TikTok</span></a></li>
 				  <li><a href="https://www.facebook.com/OFiDCrypt" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
 				  <li><a href="https://linkedin.com/company/OFiDCrypt" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 			</ul>
@@ -181,10 +181,10 @@
 							<h2>Intro: Baby Tokin Reveal</h2>
 						</header>
 						<div class="tiktok video main">
-							<blockquote class="tiktok-embed" cite="https://www.tiktok.com/@ofidtales/video/7477706141779201286"
+							<blockquote class="tiktok-embed" cite="https://www.tiktok.com/@Giddys_CA/video/7477706141779201286"
 								data-video-id="7477706141779201286" style="max-width: 605px;min-width: 325px;">
-								<section> <a target="_blank" title="@ofidtales"
-										href="https://www.tiktok.com/@ofidtales?refer=embed">@ofidtales</a> Introducing: The OFiD Kid! Also
+								<section> <a target="_blank" title="@Giddys_CA"
+										href="https://www.tiktok.com/@Giddys_CA?refer=embed">@Giddys_CA</a> Introducing: The OFiD Kid! Also
 									known as Baby Tokin; let the Web3 Adventures &#38; Learning Begin! 🎊 <a title="ofidkid" target="_blank"
 										href="https://www.tiktok.com/tag/ofidkid?refer=embed">#OFiDKid</a> <a title="ofidcrew"
 										target="_blank" href="https://www.tiktok.com/tag/ofidcrew?refer=embed">#OFiDCrew</a> <a title="baby"
@@ -219,24 +219,24 @@
 						<tbody>
 							<tr>
 								<td style="text-align: center; vertical-align: middle;">
-									<a href="https://x.com/OFiDTales">
+									<a href="https://x.com/Giddys_CA">
 										<img src="/assets/images/social-logo/IMG_1844.png" alt="X Logo"
 											style="max-width: 35%; height: auto; display: block; margin: auto;">
 									</a>
 								</td>
 								<td style="text-align: center; vertical-align: middle;">
-									<a href="https://x.com/OFiDTales">@OFiDTales</a>
+									<a href="https://x.com/Giddys_CA">@Giddys_CA</a>
 								</td>
 							</tr>
 							<tr>
 								<td style="text-align: center; vertical-align: middle;">
-									<a href="https://www.tiktok.com/@ofidtales">
+									<a href="https://www.tiktok.com/@Giddys_CA">
 										<img src="/assets/images/social-logo/tiktok-transparent.png" alt="TikTok Logo"
 											style="max-width: 35%; height: auto; display: block; margin: auto;">
 									</a>
 								</td>
 								<td style="text-align: center; vertical-align: middle;">
-									<a href="https://www.tiktok.com/@ofidtales">@OFiDTales</a>
+									<a href="https://www.tiktok.com/@Giddys_CA">@Giddys_CA</a>
 								</td>
 							</tr>
 						</tbody>
@@ -309,7 +309,7 @@
 					<h3>Social</h3>
 					<ul class="icons alt">
 						<li><a href="https://x.com/OFiDCrypt" class="icon brands fa-x-twitter"><span class="label">X</span></a></li>
-						<li><a href="https://www.tiktok.com/@OFiDTales" class="icon brands alt fa-tiktok"><span class="label">TikTok</span></a></li>
+						<li><a href="https://www.tiktok.com/@Giddys_CA" class="icon brands alt fa-tiktok"><span class="label">TikTok</span></a></li>
 						<li><a href="https://www.facebook.com/OFiDCrypt" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
 						<li><a href="https://linkedin.com/company/OFiDCrypt" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 					</ul>
