--- a/promote.html
+++ b/promote.html
@@ -107,9 +107,9 @@
 			<ul class="links">
 				<li><a href="index.html">Home</a></li>
 				<li class="active"><a href="explore.html">Services</a></li>
-				<li><a href="community.html">Community</a></li>
+				<li><a href="community.html">News & Blog</a></li>
 				<li><a href="pages/livestream.html">𝕏 Live Spaces</a></li>
-				<li><a href="ofidtales.html">Family Fun</a></li>
+				<li><a href="ofidtales.html">Giddy's</a></li>
 				<li><a href="pages/about.html">About Us</a></li>
 			</ul>
 			<ul class="icons">
@@ -126,7 +126,7 @@
 				</li>
 				<li><a href="https://x.com/OFiDCrypt" class="icon brands fa-x-twitter"><span class="label">X</span></a>
 				</li>
-				<li><a href="https://www.tiktok.com/@OFiDTales" class="icon brands alt fa-tiktok"><span
+				<li><a href="https://www.tiktok.com/@Giddys_CA" class="icon brands alt fa-tiktok"><span
 							class="label">TikTok</span></a></li>
 				<li><a href="https://www.facebook.com/OFiDCrypt" class="icon brands alt fa-facebook-f"><span
 							class="label">Facebook</span></a></li>
@@ -306,10 +306,10 @@
 						<h2>1: Grow with Us</h2>
 					</header>
 					<div class="tiktok video main">
-						<blockquote class="tiktok-embed" cite="https://www.tiktok.com/@ofidtales/video/7483978367784602886"
+						<blockquote class="tiktok-embed" cite="https://www.tiktok.com/@Giddys_CA/video/7483978367784602886"
 							data-video-id="7483978367784602886" style="max-width: 605px;min-width: 325px;">
-							<section> <a target="_blank" title="@ofidtales"
-									href="https://www.tiktok.com/@ofidtales?refer=embed">@ofidtales</a> Unlocking the Secrets of
+							<section> <a target="_blank" title="@Giddys_CA"
+									href="https://www.tiktok.com/@Giddys_CA?refer=embed">@Giddys_CA</a> Unlocking the Secrets of
 								Meme Coins 🔐 <a title="memecoins" target="_blank"
 									href="https://www.tiktok.com/tag/memecoins?refer=embed">#memecoins</a>, <a title="cryptotrading"
 									target="_blank" href="https://www.tiktok.com/tag/cryptotrading?refer=embed">#cryptotrading</a>,
@@ -342,10 +342,10 @@
 						<h2>2: Born in Canada</h2>
 					</header>
 					<div class="tiktok video main">
-						<blockquote class="tiktok-embed" cite="https://www.tiktok.com/@ofidtales/video/7520673663033625912"
+						<blockquote class="tiktok-embed" cite="https://www.tiktok.com/@Giddys_CA/video/7520673663033625912"
 							data-video-id="7520673663033625912" style="max-width: 605px;min-width: 325px;">
-							<section> <a target="_blank" title="@ofidtales"
-									href="https://www.tiktok.com/@ofidtales?refer=embed">@ofidtales</a> eXP PROMOTE 💫 We’re launching
+							<section> <a target="_blank" title="@Giddys_CA"
+									href="https://www.tiktok.com/@Giddys_CA?refer=embed">@Giddys_CA</a> eXP PROMOTE 💫 We’re launching
 								services to SPOTLIGHT your product or app—or be the one to TRY it—where brands don’t just get a new
 								audience; they REWARD them! <a title="ofidcrypt" target="_blank"
 									href="https://www.tiktok.com/tag/ofidcrypt?refer=embed">#OFiDCrypt</a> <a title="marketing"
@@ -430,7 +430,7 @@
 					<ul class="icons alt">
 						<li><a href="https://x.com/OFiDCrypt" class="icon brands fa-x-twitter"><span
 									class="label">X</span></a></li>
-						<li><a href="https://www.tiktok.com/@OFiDTales" class="icon brands alt fa-tiktok"><span
+						<li><a href="https://www.tiktok.com/@Giddys_CA" class="icon brands alt fa-tiktok"><span
 									class="label">TikTok</span></a></li>
 						<li><a href="https://www.facebook.com/OFiDCrypt" class="icon brands alt fa-facebook-f"><span
 									class="label">Facebook</span></a></li>
