--- a/cashlinks.html
+++ b/cashlinks.html
@@ -103,9 +103,9 @@
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
 					<li><a href="explore.html">Services</a></li>
-					<li><a href="community.html">Community</a></li>
+					<li><a href="community.html">News & Blog</a></li>
 					<li><a href="pages/livestream.html">𝕏 Live Spaces</a></li>
-					<li><a href="ofidtales.html">Family Fun</a></li>
+					<li><a href="ofidtales.html">Giddy's</a></li>
 					<li><a href="pages/about.html">About Us</a></li>
 				</ul>
 
@@ -122,7 +122,7 @@
 						</a>
 					</li>
 						<li><a href="https://x.com/OFiDCrypt" class="icon brands fa-x-twitter"><span class="label">X</span></a></li>
-						<li><a href="https://www.tiktok.com/@OFiDTales" class="icon brands alt fa-tiktok"><span class="label">TikTok</span></a></li>
+						<li><a href="https://www.tiktok.com/@Giddys_CA" class="icon brands alt fa-tiktok"><span class="label">TikTok</span></a></li>
 						<li><a href="https://www.facebook.com/OFiDCrypt" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
 						<li><a href="https://linkedin.com/company/OFiDCrypt" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 				</ul>
@@ -337,7 +337,7 @@
 						<h3>Social</h3>
 						<ul class="icons alt">
 							<li><a href="https://x.com/OFiDCrypt" class="icon brands fa-x-twitter"><span class="label">X</span></a></li>
-							<li><a href="https://www.tiktok.com/@OFiDTales" class="icon brands alt fa-tiktok"><span class="label">TikTok</span></a></li>
+							<li><a href="https://www.tiktok.com/@Giddys_CA" class="icon brands alt fa-tiktok"><span class="label">TikTok</span></a></li>
 							<li><a href="https://www.facebook.com/OFiDCrypt" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
 							<li><a href="https://linkedin.com/company/OFiDCrypt" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						</ul>
