--- a/community.html
+++ b/community.html
@@ -33,7 +33,7 @@
 		</script>
 
 	<!-- Meta Description (for SEO) -->
-	<title>Community Connections | OFiDCrypt</title>
+	<title>News & Blog | OFiDCrypt</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 	<meta name="description"
@@ -43,7 +43,7 @@
 	<meta name="author" content="Tokin">
 
 	<!-- Open Graph Meta Tags -->
-	<meta property="og:title" content="Community Connections | OFiDCrypt">
+	<meta property="og:title" content="News & Blog | OFiDCrypt">
 	<meta property="og:description"
 		content="Join the vibrant OFiDCrypt community to share knowledge and experiences. Connect, learn, and engage with us!">
 	<meta property="og:image" content="https://www.ofidcrypt.com/assets/images/webp/bg-community-lowres.webp">
@@ -52,7 +52,7 @@
 
 	<!-- Twitter Card Meta Tags -->
 	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:title" content="Community Connections | OFiDCrypt">
+	<meta name="twitter:title" content="News & Blog | OFiDCrypt">
 	<meta name="twitter:description"
 		content="Join the vibrant OFiDCrypt community to share knowledge and experiences. Connect, learn, and engage with us!">
 	<meta name="twitter:image" content="https://www.ofidcrypt.com/assets/images/webp/bg-community-lowres.webp">
@@ -108,9 +108,9 @@
 			<ul class="links">
 				<li><a href="index.html">Home</a></li>
 				<li><a href="explore.html">Services</a></li>
-				<li class="active"><a href="community.html">Community</a></li>
+				<li class="active"><a href="community.html">News & Blog</a></li>
 				<li><a href="pages/livestream.html">𝕏 Live Spaces</a></li>
-				<li><a href="ofidtales.html">Family Fun</a></li>
+				<li><a href="ofidtales.html">Giddy's</a></li>
 				<li><a href="pages/about.html">About Us</a></li>
 			</ul>
 			<ul class="icons">
@@ -127,7 +127,7 @@
 				</li>
 				<li><a href="https://x.com/OFiDCrypt" class="icon brands fa-x-twitter"><span class="label">X</span></a>
 				</li>
-				<li><a href="https://www.tiktok.com/@OFiDTales" class="icon brands alt fa-tiktok"><span
+				<li><a href="https://www.tiktok.com/@Giddys_CA" class="icon brands alt fa-tiktok"><span
 							class="label">TikTok</span></a></li>
 				<li><a href="https://www.facebook.com/OFiDCrypt" class="icon brands alt fa-facebook-f"><span
 							class="label">Facebook</span></a></li>
@@ -182,7 +182,7 @@
 								clutter. Simple ideas, packaged neatly.<br><br>Hey, it has to be this way for the new
 								people we are
 								introducing!
-								<a href="https://twitter.com/OFiDKid?ref_src=twsrc%5Etfw">@OFiDTales</a> is only just
+								<a href="https://twitter.com/OFiDKid?ref_src=twsrc%5Etfw">@Giddys_CA</a> is only just
 								getting
 								started!<br><br>Safe, educational, fun and supporting of others.… <a
 									href="https://t.co/1QBoOKJqkd">https://t.co/1QBoOKJqkd</a> <a
@@ -596,7 +596,7 @@
 					<ul class="icons alt">
 						<li><a href="https://x.com/OFiDCrypt" class="icon brands fa-x-twitter"><span
 									class="label">X</span></a></li>
-						<li><a href="https://www.tiktok.com/@OFiDTales" class="icon brands alt fa-tiktok"><span
+						<li><a href="https://www.tiktok.com/@Giddys_CA" class="icon brands alt fa-tiktok"><span
 									class="label">TikTok</span></a></li>
 						<li><a href="https://www.facebook.com/OFiDCrypt" class="icon brands alt fa-facebook-f"><span
 									class="label">Facebook</span></a></li>
