Updated home page for Enable Web3+ flow and added affiliates. Formating changes to add additional main tiles on index.html. Small text changes and adjustments.

--- a/community.html
+++ b/community.html
@@ -154,14 +154,14 @@
 				<header class="major">
 					<span class="date">e𝕏P Web3™ Bulletins</span>
 					<h1>What's New?<br />
-						Latest Socials</h1>
+						Latest Updates</h1>
 					<p>Keep up-to-date with what's happening throughout the OFiDCrypt journey; we're working towards
 						global web3 adoption starting in Canada!</p>
 			
 					<!-- Bulletins & Social Links Buttons -->
 					<div class="round-button-container">
 						<button class="round-button"><a href="#bulletins">Social Tips</a></button>
-						<button class="round-button"><a href="#socials-banner">Chat Spaces</a></button>
+						<button class="round-button"><a href="#socials-banner">Chat & Share</a></button>
 					</div>
 				</header>
 			
@@ -452,13 +452,13 @@
 						<tbody>
 							<tr>
 								<td style="text-align: center; vertical-align: middle;">
-									<a href="https://x.com/OFiDCrypt">
+									<a href="https://x.com/i/communities/1882320194288373975">
 										<img src="/assets/images/social-logo/IMG_1844.png" alt="X Logo"
 											style="max-width: 35%; height: auto; display: block; margin: auto;">
 									</a>
 								</td>
 								<td style="text-align: center; vertical-align: middle;">
-									<a href="https://x.com/OFiDCrypt">@OFiDCrypt</a>
+									<a href="https://x.com/i/communities/1882320194288373975">𝕏 Community & Live Spaces 🎙</a>
 								</td>
 							</tr>
 							<tr>
@@ -469,18 +469,7 @@
 									</a>
 								</td>
 								<td style="text-align: center; vertical-align: middle;">
-									<a href="https://t.me/OFiDBall">@OFiDBall</a>
-								</td>
-							</tr>
-							<tr>
-								<td style="text-align: center; vertical-align: middle;">
-									<a href="https://app.flipchat.xyz/room/350">
-										<img src="/assets/images/social-logo/IMG_1884 (1).png" alt="Flipchat Logo"
-											style="max-width: 35%; height: auto; display: block; margin: auto;">
-									</a>
-								</td>
-								<td style="text-align: center; vertical-align: middle;">
-									<a href="https://app.flipchat.xyz/room/350">Room #350</a>
+									<a href="https://t.me/OFiDBall">Telegram Updates & Discussion</a>
 								</td>
 							</tr>
 						</tbody>
