--- a/ofidtales.html
+++ b/ofidtales.html
@@ -279,10 +279,10 @@
 				<header class="major">
 					<span class="date">Giddy's by OFiDCrypt</span>
 					<h1>Giddy's Universe</h1>
-					<p>Giddy's Universe is a family-focused division of OFiDCrypt; featuring <a href="#meet-crew">Giddy, Buster & Rex</a>
-						in
-						an animated series of short videos known as Giddy Tales, real world adventures with <a
-							href="/ofidkid.html">The OFiD Kid</a></p> and series branded goods for kids from Giddys.Shop!
+					<p>Giddy's Universe is a family-focused division of OFiDCrypt; featuring <a href="#meet-crew">Giddy, Buster &
+							Rex</a>
+						in an animated series of short videos known as Giddy Tales, real world adventures with <a
+							href=" /ofidkid.html"> The OFiD Kid</a> and series branded goods for kids from Giddys.Shop!</p>
 				</header>
 		
 				<section class="quick-start-section">
