Various formatting changes accross explore.html for button pairs and classes. Updated bulletins on community.html and updated some tiles on index.html.

--- a/community.html
+++ b/community.html
@@ -168,7 +168,7 @@
 				<!-- X Post Embed: Row HEADING -->
 				<header>
 					<a href="https://www.ofidcrypt.com/pages/livestream.html#EXP-003">
-						<h2>App Early Development</h2>
+						<h2>Giddy's Shows Up in Canada</h2>
 					</a>
 				</header>
 			
@@ -176,40 +176,33 @@
 				<div class="x-post-container">
 					<div class="x-post video main">
 						<blockquote class="twitter-tweet">
-							<p lang="en" dir="ltr">We will give EVERYTHING to keep you busy and entertained. Tell your
-								friends!
-								💫<br><br>No
-								clutter. Simple ideas, packaged neatly.<br><br>Hey, it has to be this way for the new
-								people we are
-								introducing!
-								<a href="https://twitter.com/OFiDKid?ref_src=twsrc%5Etfw">@Giddys_CA</a> is only just
-								getting
-								started!<br><br>Safe, educational, fun and supporting of others.… <a
-									href="https://t.co/1QBoOKJqkd">https://t.co/1QBoOKJqkd</a> <a
-									href="https://t.co/ybZ8K3JcHo">pic.twitter.com/ybZ8K3JcHo</a>
-							</p>— OFiDCrypt e𝕏P Web3™ (@OFiDCrypt)
-							<a href="https://twitter.com/OFiDCrypt/status/1906266035361403317?ref_src=twsrc%5Etfw">March
-								30, 2025</a>
+							<p lang="en" dir="ltr">🚫 NO AI <a
+									href="https://twitter.com/search?q=%24PENGU&amp;src=ctag&amp;ref_src=twsrc%5Etfw">$PENGU</a> of <a
+									href="https://twitter.com/pudgypenguins?ref_src=twsrc%5Etfw">@pudgypenguins</a> <br><br>There’s NO
+								BETTER DISPLAY of OFiDCrypt &amp; Giddy’s UNIVERSE potential in Canada than this.. <br><br>Look who’s in
+								Canadian dollar stores! 🐧<br><br>We built our vision unaware of theirs—this matters, because it
+								preserves our own sense of originality and… <a
+									href="https://t.co/yVViTonw50">https://t.co/yVViTonw50</a> <a
+									href="https://t.co/stFhTpXb26">pic.twitter.com/stFhTpXb26</a></p>&mdash; Tokin 🍁 OFiDCrypt Web3+
+							Media™ (@OFiDCrypt) <a
+								href="https://twitter.com/OFiDCrypt/status/1963385390490071539?ref_src=twsrc%5Etfw">September 3,
+								2025</a>
 						</blockquote>
 					</div>
 			
 					<!-- X Post Embed: Row Slot 2 -->
 					<div class="x-post video main">
 						<blockquote class="twitter-tweet">
-							<p lang="en" dir="ltr">OUR VISION: See it 💫<br>PART 2: We will form a post chain of
-								progress 🎊<br><br>Also
-								on
-								TikTok 📹<br>👉 <a href="https://t.co/WhswoMObEm">https://t.co/WhswoMObEm</a><br><br>Follow our
-								development
-								journey through in-house designs and professional collaborations 🙏<br><br>✅ Safe<br>✅
-								Educational<br>✅
-								Fun<br>✅
-								Supporting of others!<br><br>No clutter.… <a
-									href="https://t.co/WaHDLP8SGl">https://t.co/WaHDLP8SGl</a>
-								<a href="https://t.co/FNT2xu9mzC">pic.twitter.com/FNT2xu9mzC</a>
-							</p>— OFiDCrypt e𝕏P Web3™ (@OFiDCrypt)
-							<a href="https://twitter.com/OFiDCrypt/status/1906770834464882997?ref_src=twsrc%5Etfw">March
-								31, 2025</a>
+							<p lang="en" dir="ltr">AN ALL-IN-ONE OFiD SUMMARY 💡<br>What make’s us who we are? <br><br>This 3-Section
+								multi-thread shows EXACTLY what we’ve done—with TRAILERS and LINKS to all in-house resources! 💫<br><br>1️⃣
+								<a href="https://twitter.com/hashtag/MicroEconomies?src=hash&amp;ref_src=twsrc%5Etfw">#MicroEconomies</a> -
+								The System<br>2️⃣ <a
+									href="https://twitter.com/hashtag/BouncyBall?src=hash&amp;ref_src=twsrc%5Etfw">#BouncyBall</a> - The
+								Token<br>3️⃣ <a href="https://twitter.com/hashtag/Giddys?src=hash&amp;ref_src=twsrc%5Etfw">#Giddys</a> of <a
+									href="https://twitter.com/OFiDTales?ref_src=twsrc%5Etfw">@OFiDTales</a> - The People’s Bridge to… <a
+									href="https://t.co/kAGrOPSvYQ">pic.twitter.com/kAGrOPSvYQ</a></p>&mdash; Tokin 🍁 OFiDCrypt Web3+ Media™
+							(@OFiDCrypt) <a href="https://twitter.com/OFiDCrypt/status/1957325057132556618?ref_src=twsrc%5Etfw">August 18,
+								2025</a>
 						</blockquote>
 					</div>
 				</div>
@@ -400,7 +393,7 @@
 				<!-- X Post Embed: Row 1 HEADING -->
 				<header>
 					<a href="https://www.ofidcrypt.com/pages/livestream.html#EXP-003">
-						<h2>AIRDROP #2 CONCLUDED</h2>
+						<h2>Big Giveaways</h2>
 					</a>
 				</header>
 
@@ -408,31 +401,38 @@
 				<div class="x-post-container">
 					<div class="x-post video main">
 						<blockquote class="twitter-tweet">
-							<p lang="en" dir="ltr">REMEMBER THE FIRST AIRDROP? ☔️<br>This is the TRAILER/TEASER for
-								#2!<a
-									href="https://twitter.com/hashtag/BouncyBall?src=hash&amp;ref_src=twsrc%5Etfw">#BouncyBall</a>
-								rewards.. Well, we showed you integrity and delivered before, and now we’re doing it
-								AGAIN—only BIGGER
-								🎊<br><br>SHOTS FIRED:<br>💥 350 guaranteed SOL address deposits<br>💥 Capped bonus
-								eXtra for OFiDKid X
-								&amp;… <a href="https://t.co/6PugH94sWe">pic.twitter.com/6PugH94sWe</a></p>&mdash;
-							OFiDCrypt e𝕏P Web3™
-							(@OFiDCrypt) <a
-								href="https://twitter.com/OFiDCrypt/status/1901173365395853516?ref_src=twsrc%5Etfw">March
-								16, 2025</a>
+							<p lang="en" dir="ltr">CHEQUE-OUT! 10M BOUNCY BALL 💸<br>A community initiative to boost awareness and
+								holders!<br><br>That’s your share of $361.08—available to claim if you’re a <a
+									href="https://twitter.com/search?q=%24STREAM&amp;src=ctag&amp;ref_src=twsrc%5Etfw">$STREAM</a>
+								STAKER at <a href="https://twitter.com/streamflow_fi?ref_src=twsrc%5Etfw">@streamflow_fi</a>
+								🚀<br><br>STAKERS CLAIM HERE👇<a href="https://t.co/KHLyr0XyHD">https://t.co/KHLyr0XyHD</a><br><br>We’re
+								not affiliated; we just share cool stuff!… <a href="https://t.co/hL9EBvoxmr">https://t.co/hL9EBvoxmr</a>
+								<a href="https://t.co/PL2OlButgK">pic.twitter.com/PL2OlButgK</a></p>&mdash; Tokin 🍁 OFiDCrypt Web3+
+							Media™ (@OFiDCrypt) <a
+								href="https://twitter.com/OFiDCrypt/status/1956418037562909100?ref_src=twsrc%5Etfw">August 15, 2025</a>
 						</blockquote>
 					</div>
 
 					<!-- X Post Embed: Row Slot 2 -->
 					<div class="x-post video main">
 						<blockquote class="twitter-tweet">
-							<p lang="en" dir="ltr">AIRDROP: 500 e𝕏PB Wallets 🎊<br>AIRSHOT 🎯 With Livestream Grand Prize Draw!
-								🏆<br><br>💬 “Drop Your SOL Address”… ⚠️ Read Post 5 Rules Carefully!<br><br>🎥 LIVESTREAM: Wednesday 23rd
-								April at 3:00 PM PST (Attendance not required for rewards) 🎊<br><br>TIER 1 (Basic Qualification): X Social
-								Follows… <a href="https://t.co/0Lj7FySRMK">https://t.co/0Lj7FySRMK</a> <a
-									href="https://t.co/kD8SGbGJjX">pic.twitter.com/kD8SGbGJjX</a></p>&mdash; Tokin 🍁 OFiD Web3 &amp; AI
-							Design™ (@OFiDCrypt) <a
-								href="https://twitter.com/OFiDCrypt/status/1913034970513433037?ref_src=twsrc%5Etfw">April 18, 2025</a>
+							<p lang="en" dir="ltr">TODAY, we gave away:<br>1 MILLION <a
+									href="https://twitter.com/hashtag/BOUNCYBALL?src=hash&amp;ref_src=twsrc%5Etfw">#BOUNCYBALL</a>
+								🎊<br><br>CONGRATS to our TRIVIA WINNERS 🏆<a
+									href="https://twitter.com/byencrypted?ref_src=twsrc%5Etfw">@byencrypted</a><a
+									href="https://twitter.com/Esquare777?ref_src=twsrc%5Etfw">@Esquare777</a><a
+									href="https://twitter.com/Web3_INK?ref_src=twsrc%5Etfw">@Web3_INK</a><a
+									href="https://twitter.com/SNATOR_001?ref_src=twsrc%5Etfw">@SNATOR_001</a> <a
+									href="https://twitter.com/SmxFx?ref_src=twsrc%5Etfw">@SmxFx</a><a
+									href="https://twitter.com/Dev_Dee3?ref_src=twsrc%5Etfw">@Dev_Dee3</a><a
+									href="https://twitter.com/ZOlokungboye?ref_src=twsrc%5Etfw">@ZOlokungboye</a><a
+									href="https://twitter.com/Ademoyegun92?ref_src=twsrc%5Etfw">@Ademoyegun92</a><a
+									href="https://twitter.com/Egwu80946?ref_src=twsrc%5Etfw">@Egwu80946</a><br><br>TO BE CONTINUED.. There
+								are reasons to claim and HOLD your prize in tokens..<br>👀<br><br>Thanks again… <a
+									href="https://t.co/9zxoyPO3NL">https://t.co/9zxoyPO3NL</a> <a
+									href="https://t.co/v0HD2B8geG">pic.twitter.com/v0HD2B8geG</a></p>&mdash; Tokin 🍁 OFiDCrypt Web3+ Media™
+							(@OFiDCrypt) <a href="https://twitter.com/OFiDCrypt/status/1952155088778371081?ref_src=twsrc%5Etfw">August 3,
+								2025</a>
 						</blockquote>
 					</div>
 				</div>
@@ -445,7 +445,7 @@
 						<!-- Ad Banner -->
 						<section id="socials-banner" class="ad-banner">
 							<div style="text-align: center;">
-								<img src="/assets/images/ofidkid-buster-bouncer-01.jpg" alt="Ad Banner"
+								<img src="/assets/images/social-buster-bouncer-01.png" alt="Ad Banner"
 									style="max-width: 100%; height: auto;">
 							</div>
 						</section>
@@ -458,7 +458,7 @@
 									</a>
 								</td>
 								<td style="text-align: center; vertical-align: middle;">
-									<a href="https://x.com/i/communities/1882320194288373975">𝕏 Community & Live Spaces 🎙</a>
+									<a href="https://x.com/i/communities/1882320194288373975">𝕏 Community </br>Live Spaces</a>
 								</td>
 							</tr>
 							<tr>
@@ -469,7 +469,7 @@
 									</a>
 								</td>
 								<td style="text-align: center; vertical-align: middle;">
-									<a href="https://t.me/OFiDBall">Telegram Updates & Discussion</a>
+									<a href="https://t.me/OFiDBall">Telegram Channel </br>Discussion Group</a>
 								</td>
 							</tr>
 						</tbody>
@@ -480,23 +480,17 @@
 				<article class="product-section">
 					<div class="product-wrapper">
 						<div class="product-content">
-							<a href="https://www.ofidcrypt.ca/">
-								<span class="image right"><img src="../assets/images/ofid-exp-social-card-01.png"
-										alt="eXP Brand Card COlour Splash"></span>
 							</a>
 							<h3 style="text-align: center;">Your Choice of Platform</h3>
 							<!-- Partner Nav Button 1 -->
 							<div style="text-align: center;">
 								<button class="button"><a href="https://www.ofidcrypt.ca">See Full List</a></button>
 							</div>
-							<p>Join our communities on 𝕏, Telegram, Flipchat, and more! Take part in exciting
-								promotions and live events
-								with e𝕏PB Bouncy Ball. We are deeply rooted in various social platforms, offering value
-								to a wide audience.
-								Embrace the Web3 movement and grow with us! Buster invites you to explore more <a
-									href="/pages/affiliate.html">Partners & Communities</a></p>
-							</p>
-						</div>
+							<p style="text-align: center;">
+								Join our communities on 𝕏, Telegram, and more! Participate in exciting
+								promotions and live events with <strong>eXPB Bouncy Ball</strong>. We're deeply engaged across social
+								platforms, delivering value to a diverse audience. Embrace the Web3
+								movement and grow with us!</p>
 					</div>
 				</article>
 				</div>
