--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
 					<section class="featured-service">
 						<div class="featured-service-items">
 
-							<!-- Tile 1: Explore -->
+							<!-- Tile 1: Get Started: Partners -->
 							<article class="featured-service-item--featured">
 								<span class="image left"><img src="/assets/images/get-started-partners-4x3.PNG"
 										alt="e𝕏PB Member Explore Icon"></span>
@@ -349,7 +349,7 @@
 								</div>
 							</article>
 
-							<!-- Tile 2: Promote -->
+							<!-- Tile 2: Giddy's Universe -->
 							<article class="featured-service-item--featured">
 								<span class="image left"><img src="/assets/images/giddys-4x3.png"
 										alt="e𝕏PB Business Promote Icon"></span>
@@ -362,14 +362,14 @@
 								</div>
 							</article>
 
-							<!-- Tile 3: Giddy's Shop -->
+							<!-- Tile 3: Explore Services -->
 							<article class="featured-service-item--featured">
-								<span class="image left"><img src="/assets/images/expb-member-explore2.jpg"
+								<span class="image left"><img src="/assets/images/expb-member-explore4.png"
 										alt="e𝕏PB Member Explore Icon"></span>
 
 								<!-- DESCRIPTION -->
 								<div class="quick-start-content">
-									<h3 class="quick-start-title">Experience Web3</h3>
+									<h3 class="quick-start-title">Experience </br>e𝕏P Web3+</h3>
 									<p class="align-center">Try Apps · Join Communities · Earn Rewards</p>
 									<button class="round-button"><a href="/explore.html">Explore Now</a></button>
 								</div>
