--- a/explore.html
+++ b/explore.html
@@ -291,14 +291,17 @@
 					<h1>Web3 <br /> Discovery</h1>
 					<p>Check out apps from leading innovators in the web3 space, promote with us or explore our library of
 						knowledge articles; written and published by OFiDCrypt.</p>
-
+			
 					<!-- Apps & Learn Buttons -->
 					<div class="round-button-container">
-						<button class="round-button"><a href="#apps-list">Explore Apps</a></button>
-						<button class="round-button"><a href="/promote.html">Grow Your Audience</a></button>
-						<button class="round-button"><a href="#article-featured">Learn Web3</a></button>
+						<div class="button-pair">
+							<button class="round-button"><a href="#apps-list">Explore Apps</a></button>
+							<button class="round-button"><a href="/promote.html">Grow Audience</a></button>
+						</div>
+						<div class="button-pair">
+							<button class="round-button"><a href="#article-featured">Learn Web3</a></button>
+						</div>
 					</div>
-
 				</header>
 
 				<!-- Quick Start Section -->
