Formatting changes to button pairs on promote.html and community.html. Added MYLO to kincommunity.html Token Projects--other minor text changes.

--- a/community.html
+++ b/community.html
@@ -160,8 +160,10 @@
 			
 					<!-- Bulletins & Social Links Buttons -->
 					<div class="round-button-container">
-						<button class="round-button"><a href="#bulletins">Social Tips</a></button>
-						<button class="round-button"><a href="#socials-banner">Chat & Share</a></button>
+						<div class="button-pair">
+							<button class="round-button"><a href="#bulletins">Social Tips</a></button>
+							<button class="round-button"><a href="#socials-banner">Chat & Share</a></button>
+						</div>
 					</div>
 				</header>
 			
@@ -488,7 +490,7 @@
 							</div>
 							<p style="text-align: center;">
 								Join our communities on 𝕏, Telegram, and more! Participate in exciting
-								promotions and live events with <strong>eXPB Bouncy Ball</strong>. We're deeply engaged across social
+								promotions and live events with <strong>e𝕏PB Bouncy Ball</strong>. We're deeply engaged across social
 								platforms, delivering value to a diverse audience. Embrace the Web3
 								movement and grow with us!</p>
 					</div>
