--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
 							A Wallet (think of it like a banking app), and an Exchange account (kind of like a crypto
 							bank account).
 							That’s it! You’re ready to easily swap your dollars for your first digital asset—just like
-							exchanging money for a vacation abroad.
+							exchanging money for a vacation abroad!
 						</p>
 					</header>
 
@@ -421,7 +421,7 @@
 							</div>
 						</article>
 						<article class="quick-start-item"> <span class="image left"><img
-									src="/assets/images/expb-ball02.GIF" alt="eXPB Icon"></span>
+									src="/assets/images/expb-ball02.GIF" alt="e𝕏PB Icon"></span>
 							<div class="quick-start-content">
 								<h3 class="quick-start-title">Get Bouncy Ball</h3>
 								<p class="align-center">e𝕏PB · On Solana <br />
