--- a/kincommunity.html
+++ b/kincommunity.html
@@ -190,7 +190,7 @@
 				<!-- Community Connections Section -->
 				<section class="partner-section" id="bulletins">
 					<header>
-						<h2>Members</h2>
+						<h2>Member Token Projects</h2>
 					</header>
 
 					<!-- Horizontal Scroll Container -->
@@ -216,11 +216,30 @@
 							<button class="scroll-arrow right" aria-label="Scroll Right"><i class="fas fa-arrow-right"></i></button>
 						</article>
 
-						<!-- Box 2: DUNO -->
+						<!-- Box 2: MYLO -->
 						<article class="scroll-box">
 							<button class="scroll-arrow left" aria-label="Scroll Left"><i class="fas fa-arrow-left"></i></button>
 							<div class="box-content">
-								<a href="https://x.com/dunoglobal" target="_blank">
+								<a href="https://t.me/mylocat_official" target="_blank">
+									<span class="image">
+										<img src="assets/images/mylocat-logo.jpg" alt="MYLO Logo">
+									</span>
+								</a>
+								<h3>MYLO Cat</h3>
+								<p>Cutest Cat on Solana + Strong Community + Real Utility + Jupiter Swap + Coming up MYLO TRADING BOT!</p>
+								<!-- Bulletins & Social Links Buttons -->
+								<div class="round-button-container">
+									<button class="round-button"><a href="https://t.me/mylocat_official">Telegram</a></button>
+								</div>
+							</div>
+							<button class="scroll-arrow right" aria-label="Scroll Right"><i class="fas fa-arrow-right"></i></button>
+						</article>
+
+						<!-- Box 3: DUNO -->
+						<article class="scroll-box">
+							<button class="scroll-arrow left" aria-label="Scroll Left"><i class="fas fa-arrow-left"></i></button>
+							<div class="box-content">
+								<a href="https://x.com/MYLOCAT_" target="_blank">
 									<span class="image">
 										<img src="assets/images/logo-duno.jpeg" alt="DUNO Logo">
 									</span>
@@ -359,6 +378,44 @@
 						});
 					});
 					</script>
+
+					<!-- X Post Embed: Row HEADING -->
+					<header>
+						<a href="https://www.ofidcrypt.com/pages/livestream.html#EXP-003">
+							<h2>ONE Kin Updates</h2>
+						</a>
+					</header>
+					
+					<!-- X Post Embed: Row Slot 1 -->
+					<div class="x-post-container">
+						<div class="x-post video main">
+							<blockquote class="twitter-tweet">
+								<p lang="en" dir="ltr">We’re making a difference. No money has been made, only spent. We built ONE to
+									support all communities as ONE Kin. Shoutout to our partners who helped make this spectacular movement
+									happen. <a href="https://twitter.com/OFiDCrypt?ref_src=twsrc%5Etfw">@OFiDCrypt</a> <a
+										href="https://twitter.com/Dobby_Coin?ref_src=twsrc%5Etfw">@Dobby_Coin</a> <a
+										href="https://twitter.com/MYLOCAT_?ref_src=twsrc%5Etfw">@MYLOCAT_</a> <a
+										href="https://twitter.com/dunoglobal?ref_src=twsrc%5Etfw">@dunoglobal</a> <a
+										href="https://t.co/sjpn1YyFb1">https://t.co/sjpn1YyFb1</a> <a
+										href="https://t.co/DMiXbj26PU">pic.twitter.com/DMiXbj26PU</a></p>&mdash; OneKinCommunity
+								(@OneKinCommunity) <a
+									href="https://twitter.com/OneKinCommunity/status/1963655085428511093?ref_src=twsrc%5Etfw">September 4,
+									2025</a>
+							</blockquote>
+						</div>
+					
+						<!-- X Post Embed: Row Slot 2 -->
+						<div class="x-post video main">
+							<blockquote class="twitter-tweet">
+								<p lang="cy" dir="ltr">9Fdne837tZp97nDZTUqxv9t8Gwp2BwRf8EF7PGAAfoNe <a
+										href="https://t.co/n5mgK5JjT3">pic.twitter.com/n5mgK5JjT3</a></p>&mdash; OneKinCommunity
+								(@OneKinCommunity) <a
+									href="https://twitter.com/OneKinCommunity/status/1944409551232720929?ref_src=twsrc%5Etfw">July 13,
+									2025</a>
+							</blockquote>
+							<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+						</div>
+					</div>
 
 			<!-- More About Our Partners -->
 			<h2 style="text-align: center;">More Ways to Engage</h2>
