--- a/pages/livestream.html
+++ b/pages/livestream.html
@@ -266,7 +266,7 @@
 										<p id="event-4-desc">
 											Get ready for the next big thing—AIRDROP #2! Following the success of our first event, we're coming back even bigger
 											and better! This upcoming airdrop promises 350 guaranteed SOL address deposits, exclusive bonus rewards for OFiDKid
-											X and TikTok engagements, and capped top-ups for $KIN holders. Plus, we’re introducing the $eXPB/KIN Liquidity Pool,
+											X and TikTok engagements, and capped top-ups for $KIN holders. Plus, we’re introducing the $e𝕏PB/KIN Liquidity Pool,
 											offering token accessibility and enhanced price stability with $$ to be added!
 											Stay connected and check out the announcement tweet for more details: <a
 												href="https://x.com/OFiDCrypt/status/1901173365395853516">Announced on 𝕏</a> 📣 STAY TUNED for the event!</p>
