--- a/promote.html
+++ b/promote.html
@@ -286,16 +286,20 @@
 					<span class="date">Promotional Services</span>
 					<h1>e𝕏P Promote</h1>
 					<p>You can grow with us even if you don't promote with us; just hold <a href="/bouncyball.html">Bouncy
-							Ball</a> and sit tight as we extend our reach accross Canada! As our clients, you also have the option to get
+							Ball</a> and sit tight as we extend our reach accross Canada! As our clients, you also have the option
+						to get
 						listed on our <a href="/promote/client-directory.html">Directory Page</a> for extended visibility!</p>
-
+			
 					<!-- Apps & Learn Buttons -->
 					<div class="round-button-container">
-						<button class="round-button"><a href="#trailers">Trailers</a></button>
-						<button class="round-button"><a href="#">Service Options</a></button>
-						<button class="round-button"><a href="#">Our Work</a></button>
+						<div class="button-pair">
+							<button class="round-button"><a href="#trailers">Trailers</a></button>
+							<button class="round-button"><a href="#">Our Work</a></button>
+						</div>
+						<div class="button-pair">
+							<button class="round-button"><a href="#">Packages</a></button>
+						</div>
 					</div>
-		
 				</header>
 
 			<!-- TikTok Embed -->
