--- a/explore/app-featured-hvr.html
+++ b/explore/app-featured-hvr.html
@@ -40,7 +40,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<meta name="description"
 		content="We collaborate with trusted developers to deliver unique Web3 experiences through innovative apps, rewarding users with tokens that hold real-world value for trying them out!">
-	<meta name="keywords" content="cryptocurrency, web3, apps, rewards, bouncy ball, eXPB, OFiDCrypt, crypto community">
+	<meta name="keywords" content="cryptocurrency, web3, apps, rewards, bouncy ball, e𝕏PB, OFiDCrypt, crypto community">
 	<meta name="author" content="Tokin">
 	
 	<!-- Open Graph Meta Tags -->
