--- a/pages/about.html
+++ b/pages/about.html
@@ -327,7 +327,7 @@
 										<h3>Our Mission</h3>
 										<p>To lead Web3 adoption by empowering everyone—businesses, consumers, and newcomers—with
 											#MicroEconomies,
-											a simple framework for discounted services, growth, and savings using eXPB Bouncy Ball.
+											a simple framework for discounted services, growth, and savings using e𝕏PB Bouncy Ball.
 											Through
 											strategic marketing and viral onboarding, we unite brands and regular folks in a
 											sustainable
