Updated style of affiliate.html to scroll containers. Fix link navigation for DUNO and MYULO for kincommunity.html. Added new CSSD clasds for affiliate scroll-box.

--- a/kincommunity.html
+++ b/kincommunity.html
@@ -220,7 +220,7 @@
 						<article class="scroll-box">
 							<button class="scroll-arrow left" aria-label="Scroll Left"><i class="fas fa-arrow-left"></i></button>
 							<div class="box-content">
-								<a href="https://t.me/mylocat_official" target="_blank">
+								<a href="https://x.com/MYLOCAT_" target="_blank">
 									<span class="image">
 										<img src="assets/images/mylocat-logo.jpg" alt="MYLO Logo">
 									</span>
@@ -239,7 +239,7 @@
 						<article class="scroll-box">
 							<button class="scroll-arrow left" aria-label="Scroll Left"><i class="fas fa-arrow-left"></i></button>
 							<div class="box-content">
-								<a href="https://x.com/MYLOCAT_" target="_blank">
+								<a href="https://x.com/dunoglobal" target="_blank">
 									<span class="image">
 										<img src="assets/images/logo-duno.jpeg" alt="DUNO Logo">
 									</span>
