--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 		<!-- Header -->
 		<header id="header">
 			<div class="logo">
-				<img src="assets/images/logo01.png" alt="OFiDCrypt Transparent Logo" />
+				<img src="assets/images/bouncy-ball-500.png" alt="OFiDCrypt Transparent Logo" />
 			</div>
 		</header>
 
